# tap-fedidb

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5
.github/workflows/: build.yml  test.yml
tap_fedidb/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
