[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "tap-fedidb"
description = "Singer tap for FediDB, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [ "ELT", "FediDB", "singer.io" ]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrmondragon@hey.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrmondragon@hey.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.47.0",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-fedidb#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-fedidb"
urls.Repository = "https://github.com/edgarrmondragon/tap-fedidb"
scripts."tap-fedidb" = "tap_fedidb.tap:TapFediDB.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [ "deptry>=0.12", "pytest>=8", "singer-sdk[testing]" ]
typing = [ "mypy" ]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.flake8-annotations.allow-star-arg-any = true
lint.isort.known-first-party = [ "tap_fedidb" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
pytest = "pytest"
tap-fedidb = "tap_fedidb"
types-requests = "requests"

[tool.deptry.per_rule_ignores]
DEP002 = [ "deptry", "mypy", "pytest" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-uv" ]
env_list = [
  "dependencies",
  "typing",
  "3.14",
  "3.13",
  "3.12",
  "3.11",
  "3.10",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_FEDIDB_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]

[tool.tox.env.sync]
commands = [ [ "tap-fedidb", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [ [ "mypy", "--strict", { replace = "posargs", default = [ "tap_fedidb", "tests" ], extend = true } ] ]

[tool.mypy]
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [ "backoff.*" ]

[tool.uv]
required-version = ">=0.5.19"
